--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
       <div class="left">
         <div class="calendar">
           <div class="month">
-            <i class="fa fa-angle-left"></i>
-            <div class="date">January 2025</div>
-            <i class="fa fa-angle-right"></i>
+            <i class="fa fa-angle-left prev"></i>
+            <div class="date"></div>
+            <i class="fa fa-angle-right next"></i>
           </div>
           <div class="weekdays">
             <div>sun</div>
